--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -20,7 +20,9 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=1.0\columnwidth]{fig/combinedfigs.pdf}
-\caption{{\bf Characterization of stability and robustness according to properties of system structure} (A) Stability versus connectivity, (B) robustness versus connectivity, (C) robustness versus number of cycles, (D) robustness versus graph edit distance, (E) robustness versus number of cycles and connectivity, and (F) robustness versus graph edit distance and connectivity for three component systems.}
+\caption{{\bf Characterization of stability and robustness according to properties of system structure} (A) Stability versus connectivity, (B) robustness versus connectivity, (C) robustness versus number of cycles, (D) robustness versus graph edit distance%, (E) robustness versus number of cycles and connectivity, and (F) robustness versus graph edit distance and connectivity
+ for three component systems.
+}
 \label{fig:combined}
 \end{figure}
 
@@ -39,12 +41,23 @@
 % \label{fig:apstab3x3}
 % \end{figure}
 
-% \begin{figure}[!ht]
-% \centering
-% \noindent\includegraphics[width=0.8\columnwidth]{fig/connectcycle3D3x3.pdf}
-% \caption{{\bf Plot of stability to perturbations versus number of cycles and connectivity for three component systems.} }
-% \label{fig:connectcycle3D3x3}
-% \end{figure}
+\pagebreak
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.7\columnwidth]{fig/connectcycle3D3x3.pdf}
+\caption{{\bf Plot of stability to perturbations versus number of cycles and connectivity for three component systems.} }
+\label{fig:connectcycle3D3x3}
+\end{figure}
+
+\pagebreak
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.7\columnwidth]{fig/connectdist3D3x3.pdf}
+\caption{{\bf Plot of robustness versus graph edit distance and connectivity for three component systems.} }
+\label{fig:connectdist3D3x3}
+\end{figure}
 
 % \begin{figure}[!ht]
 % \centering
