update references to separated figures

--- a/paper.tex
+++ b/paper.tex
@@ -326,9 +326,9 @@ The relationship between connectivity and robustness for two component systems i
 \ref{fig:combined}C shows the robustness for all three component systems as a function of the number of simple cycles (elementary circuits) of length greater than one in the corresponding directed graph \cite{Johnson1975}. There appears to be a weak negative correlation between robustness and the number of simple cycles.
 
 % \section{Cycle number and connectivity classify robust systems}
-The combination of connectivity and cycle number as shown in \ref{fig:combined}E provides a better classification of the dependence of robustness upon network topology. Here the robustness of three component systems with a given number of cycles, increases monotonically with connectivity. The network with the highest robustness for three component systems is that of \ref{fig:scc}A. This network is the most hierarchical of all three component systems in the sense that it represents a total ordering of the components of the network and its adjacency matrix also shown in \ref{fig:scc}A has a block triangular structure.
+The combination of connectivity and cycle number as shown in \ref{fig:connectcycle3D3x3} provides a better classification of the dependence of robustness upon network topology. Here the robustness of three component systems with a given number of cycles, increases monotonically with connectivity. The network with the highest robustness for three component systems is that of \ref{fig:scc}A. This network is the most hierarchical of all three component systems in the sense that it represents a total ordering of the components of the network and its adjacency matrix also shown in \ref{fig:scc}A has a block triangular structure.
 
-This observation suggested that graph edit distance from \ref{fig:scc}A, hierarchy, might provide a better characterization of system robustness. \ref{fig:combined}D shows system robustness as a function of hierarchy, where the most hierarchical system has a hierarchy of 0. There is a monotonic correlation between the upper bound of robustness and hierarchy. \ref{fig:combined}F shows system robustness as a function of both hierarchy and connectivity. The monotonic correlation between hierarchy and robustness is refined by an underlying correlation between robustness and connectivity analogous to that of \ref{fig:combined}E.
+This observation suggested that graph edit distance from \ref{fig:scc}A, hierarchy, might provide a better characterization of system robustness. \ref{fig:combined}D shows system robustness as a function of hierarchy, where the most hierarchical system has a hierarchy of 0. There is a monotonic correlation between the upper bound of robustness and hierarchy. \ref{fig:connectdist3D3x3} shows system robustness as a function of both hierarchy and connectivity. The monotonic correlation between hierarchy and robustness is refined by an underlying correlation between robustness and connectivity analogous to that of \ref{fig:connectcycle3D3x3}.
 
 \section{Component decomposition, hierarchy, and the symmetries of robustness}
 
