--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -10,6 +10,15 @@
 
 \begin{figure}[!ht]
 \centering
+\noindent\includegraphics[width=0.7\columnwidth]{fig/hiertransformations.pdf}
+\caption{{\bf Symmetries of the $\hier$ transformation between graphs and SCCs.} The transformation A represents an interchange of SCCs, B moving a link between nodes in a component and C adding a link. All three transformations represent symmetries of the $\hier$ transformation from graphs to SCCs while only A and B are symmetries of robustness.}
+\label{fig:hiertransformations}
+\end{figure}
+
+\pagebreak
+
+\begin{figure}[!ht]
+\centering
 \noindent\includegraphics[width=0.4\columnwidth]{fig/scc2.pdf}
 \caption{{\bf Example of strongly connected components.} (A) - (D) show strongly connected components highlighted in gray for each of the four graphs representing the interdependencies relevant to four different three component systems. Note that the most hierarchical system in (A) has the highest possible number of connected components, three, whereas the system containing a single cycle and therefore posessing no hierarchy contains only one connected component. Systems (B) and (C) represent examples of hierarchical modular systems that posess both modularity and hierarchy.}
 \label{fig:scc}
@@ -46,7 +55,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.7\columnwidth]{fig/connectcycle3D3x3.pdf}
-\caption{{\bf Plot of stability to perturbations versus number of cycles and connectivity for three component systems.} }
+\caption{{\bf Stability to perturbations versus number of cycles and connectivity for three component systems.} }
 \label{fig:connectcycle3D3x3}
 \end{figure}
 
@@ -55,7 +64,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.7\columnwidth]{fig/connectdist3D3x3.pdf}
-\caption{{\bf Plot of robustness versus graph edit distance and connectivity for three component systems.} }
+\caption{{\bf Robustness versus graph edit distance and connectivity for three component systems.} }
 \label{fig:connectdist3D3x3}
 \end{figure}
 
